--- a/public/.htaccess
+++ b/public/.htaccess
@@ -6,4 +6,7 @@
 	RewriteCond %{REQUEST_FILENAME} !-d
 	RewriteCond %{REQUEST_URI} !^/(favicon\.ico|apple-touch-icon.*\.png)$ [NC]
 	RewriteRule (.+) index.php?p=$1 [QSA,L]
+
+	RewriteCond %{HTTPS} off
+	RewriteRule .* https://%{HTTP_HOST}%{REQUEST_URI} [L,R=301]
 </IfModule>
