adds new logo without tree graphic, changes nav and product header to use global fields incl translation

--- a/.gitignore
+++ b/.gitignore
@@ -19,8 +19,8 @@ CVS
 
 # our noise
 
-public/.sass-cache
-public/node_modules
+public/.sass-cache/
+public/node_modules/
 
 craft/storage/runtime/*
 craft/storage/backups/*
